2006-02-08  Adam Jocksch  <ajocksch@toothpaste.toronto.redhat.com>

	* process/single_exec.c (main): Fixed pedantic compiler errors.
	* process/multi_child_exec.c (BusyWorkExec): Ditto.
	(main): Ditto.
	* process/multi_parent_exec.c (_GNU_SOURCE): Ditto.
	(main): Ditto.
	* process/multi_child_parent_exec.c (BusyWork): Ditto.
	* cmdline/dump.c (_GNU_SOURCE): Ditto.

2006-02-06  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (clean-local): Use find to locate all the stray
	files.  Remove any *$*.h files.
	(TESTS_ENVIRONMENT): Send output to /dev/null, not <<log>>.

2006-02-03  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (noinst_PROGRAMS): Add samename/WrongVariable, and
	samename/WrongScope.gcj.
	* samename/WrongVariable.java: New file.
	* samename/WrongScope.java: New file.
	
2006-01-30  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (noinst_PROGRAMS, noinst_SCRIPTS): Replace
	check_PROGRAMS, and check_SCRIPTS so that tests are always built.

2006-01-27  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EXTRA_DIST): Add rh177240/strace-clone-exec.shin.

2006-01-25  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am: Where possible use check_PROGRAMS.
	(check-local): Print the compiler version.

2006-01-09  Andrew Cagney  <cagney@redhat.com>

	* rh177240/strace-clone-exec.shin: Add -f option to strace.
	
	* Makefile.am (check_PROGRAMS): Add rh177240/threadexec.
	(check_SCRIPTS): Add rh177240/strace-clone-exec.sh
	(TESTS): Add rh177240/strace-clone-exec.sh.
	(.shin.sh): New rule.
	* rh177240/threadexec.c: New file; copied from
	frysk-core/prog/syscall.
	* rh177240/strace-clone-exec.shin: New file.

2006-01-06  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (process_TESTS): Define.  Append to check_PROGRAMS
	and TESTS.
	
	* Makefile.am (check_PROGRAMS): Add cmdline/dump, and
	cmdline/print.
	(TESTS): Add cmdline/print.
	* cmdline/dump.c: New file.
	* cmdline/print.c: New file.

	* Makefile.am (rh175569/gcj.sh): Change to expected pass.
